# cookiecomposer-templates

./: package-composition.yaml  pytest.ini  requirements_test.txt
cookiecutter-boilerplate/: cookiecutter.json  requirements_test.txt
cookiecutter-boilerplate/hooks/: pre_gen_project.py
cookiecutter-boilerplate/tests/: test_bake_project.py
cookiecutter-boilerplate/{{ cookiecutter.project_name }}/: .changelog-config.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  azure-pipelines.yml  pyproject.toml  setup.cfg
cookiecutter-boilerplate/{{ cookiecutter.project_name }}/.github/workflows/: test.yaml
cookiecutter-boilerplate/{{ cookiecutter.project_name }}/requirements/: Makefile  dev.in  dev.txt  prod.in  test.in
cookiecutter-docs/: cookiecutter.json
cookiecutter-docs/{{ cookiecutter.project_name }}/docsrc/: api.rst  cli.rst  conf.py  contributing.md  index.md  make.bat  usage.md
cookiecutter-docs/{{ cookiecutter.project_name }}/requirements/: dev.txt  docs.in  docs.txt  prod.txt  test.txt
cookiecutter-mkdocs/: cookiecutter.json
cookiecutter-mkdocs/{{cookiecutter.project_name}}/: mkdocs.yml
cookiecutter-mkdocs/{{cookiecutter.project_name}}/docs/: explanation.md  gen_doc_stubs.py  glossary.md  index.md  installation.md  quickstart.md
cookiecutter-mkdocs/{{cookiecutter.project_name}}/docs/howtos/: index.md
cookiecutter-mkdocs/{{cookiecutter.project_name}}/docs/reference/: index.md
cookiecutter-package/: cookiecutter.json
cookiecutter-package/hooks/: post_gen_project.py
cookiecutter-package/tests/: test_bake_project.py
cookiecutter-package/{{cookiecutter.project_name}}/: README.md
cookiecutter-package/{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_slug}}.py
cookiecutter-package/{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py
tests/: pre-commit-config-testing.yaml  test_bake_project.py  test_package_composition.py  utils.py
