[metadata]
name = {{ cookiecutter.project_slug }}
version = attr:{{ cookiecutter.project_slug }}.__version__
description = {{ cookiecutter.project_short_description }}
url = https://github.com/{{ cookiecutter.github_user }}/{{ cookiecutter.project_name }}
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.email }}
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.9
long_description = file:README.md
long_description_content_type="text/markdown"
keywords = {{ cookiecutter.project_slug }}

[options]
zip_safe=False
include_package_data=True

;[options.entry_points]
;console_scripts =
;    {{ cookiecutter.project_name }} = {{ cookiecutter.project_slug }}.cli:cli

[options.packages.find]
exclude =
    example*
    tests*
    docs
    build
include = {{ cookiecutter.project_slug }}*

[flake8]
ignore = D203,W503
exclude =
    .git,
    .tox,
    docs,
    build,
    dist
max-line-length = 119

[darglint]
ignore=DAR402

[bumpversion]
current_version = {{cookiecutter.version}}
commit = True
commit_args = --no-verify
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\+\w+-(?P<dev>\d+))?
serialize =
    {major}.{minor}.{patch}+{$BRANCH_NAME}-{dev}
    {major}.{minor}.{patch}
message = Version updated from {current_version} to {new_version}

[bumpversion:file:{{cookiecutter.project_slug}}/__init__.py]

[bumpversion:file:CHANGELOG.md]
search = Unreleased
